[package]
name = "silkenweb-example-tauri-frontend"
version = "0.1.0"
authors = ["Simon Bourne <simonbourne@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
futures-signals = "0.3.24"
silkenweb = "0.4.0"
silkenweb-tauri = { git = "https://github.com/silkenweb/silkenweb" }
web-sys = "0.3.60"
